updated examples